force-app/main/default/objects/vlocity_cmt__VPLAbstractionLayerSetup__mdt/fields/vlocity_cmt__VPLActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VPLActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>