force-app/main/default/objects/vlocity_cmt__VPLAbstractionLayerSetup__mdt/fields/vlocity_cmt__VPLTargetDataType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VPLTargetDataType__c</fullName>
    <description>Field Data Type - use for technically Update Field</description>
    <label>TargetDataType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>TextArea</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>PickList</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>