force-app/main/default/objects/vlocity_cmt__VPLAbstractionLayerSetup__mdt/fields/vlocity_cmt__VPLTargetEntityContext__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VPLTargetEntityContext__c</fullName>
    <label>Target Entity Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
                <default>true</default>
                <label>Child</label>
            </value>
            <value>
                <fullName>RootChild</fullName>
            </value>
            <value>
                <fullName>Root</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>